# Pointcloud_fusion

./: CMakeLists.txt  package.xml
bag/: extrinsic_cam1.bag  extrinsic_cam2.bag
config/: extrinsic_calibration.yaml
launch/: L515_merge.launch  icp.launch  pointcloud_fusion.launch  pointcloud_merge.launch  yaml.launch
src/: L515_merge.cpp  extrinsic_yaml.cpp  icp.cpp  pointcloud_merge.cpp  pointcloud_merge_new.cpp
